--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "private": true,
   "version": "0.0.0",
   "type": "module",
-"homepage" : "https://Abhiram-JV.github.io/Vite/"
+"homepage" : "https://Abhiram-JV.github.io/Vite/",
  "scripts": {
   "lint": "eslint .",
   "dev": "vite",
@@ -11,7 +11,7 @@
   "preview": "vite preview",
   "predeploy": "npm run build",
   "deploy": "gh-pages -d dist"
-}
+},
 
   "dependencies": {
     "react": "^19.1.0",
